--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -19,4 +19,6 @@
 
 <p>
   <%= link_to "編集", edit_item_path(@item) %>
+  <%= link_to "削除", item_path(@item), method: :delete, data: {confirm: "Delete OK ?"} %>
 </p>
+
